# base64

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/incr4k/base64/: block.h  simple.h
src/: block.cpp  simple.cpp
tests/: CMakeLists.txt  block_api_test.cpp  main.cpp  simple_api_test.cpp
